# ImperialYear3CW

./: .gitignore  README.md
Advanced CompArch/: valid12031.txt
Advanced CompArch/mttkrp-challenge/: .gitignore  CMakeLists.txt  README.md  base.c  error.c  error.h  helper_funcs.h  load.c  main.c  matricies.h  matrix.c  matrix_dump.c  mttkrp.c  mttkrp_omp.c  openmp_script.sh  output_O0.S  output_O1.S  output_O2.S  output_O3.S  output_Ofast.S  output_SIMD.S  output_loop.S  output_normal.S  plot.py  sptensor.c  sptensors.h  status.c  structs.h  timer.c  types.h  vector.c  vector.h
Computer Vis/: README.md
Computer Vis/coursework_01/: coursework_01.ipynb
Computer Vis/coursework_02/: coursework_02.ipynb
Graphics/: gouraud_shading.json  phong_shading.json  raytracing.json  shaderlab.json  task6a.json  texture_mapping.json  texture_with_normal.json  texture_with_phong.json  toon_shading.json
Intro to ML/IntroMLCW1/code_and_report/code/: main.py  metrics.py  utils.py
Intro to ML/IntroMLCW2/: README.md  model.pth  part1_nn_lib.py  part2_house_value_regression.py  part2_model.pickle  part2_model_old.pickle
Intro to ML/IntroMLCW2/first_hp/: hp.txt  hptuning.pkl  output.txt  visualize.py
Intro to ML/MLCW1/code_and_report/code/: README.md
MLCW1/: main.py
Robotics/: practical2.ttt  practical2_fix.ttt  practical2_fix2.ttt  practical3.ttt
